[package]
name = "csg-nav"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.28"
slab = "0.4"
partition = "0.1"
itertools = "0.14"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ordered-float = "4.6"

[dev-dependencies]
ivy-engine = { git = "https://github.com/ten3roberts/ivy" }
winit = "0.30"
anyhow = "1.0"
image = "0.25"

[patch.crates-io]
violet = { git = "https://github.com/ten3roberts/violet", branch = "dev-ivy"}
