[package]
name = "constructive"
description = "Navmesh and path finding library based on constructive solid geometry"
documentation = "https://docs.rs/constructive"
repository = "https://github.com/ten3roberts/constructive"
keywords = ["pathfinding", "navmesh", "astar", "csg", "gamedev"]
license = "MIT"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["ivy-constructive"]

[dependencies]
glam = "0.30"
slab = "0.4"
partition = "0.1"
itertools = "0.14"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ordered-float = "5.0"

[dev-dependencies]
ivy-engine = { git = "https://github.com/ten3roberts/ivy" }
winit = "0.30"
anyhow = "1.0"
image = "0.25"

[patch.crates-io]
flax = { git = "https://github.com/ten3roberts/flax" }
nalgebra = { git = "https://github.com/ten3roberts/nalgebra" }

