[package]
name = "ivy-constructive"
description = "Ivy integration for constructive"
version = "0.1.0"
edition = "2021"

[dependencies]
constructive = { path = "../" }

glam = "0.28"
slab = "0.4"
partition = "0.1"
itertools = "0.14"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ordered-float = "4.6"
ivy-engine = { git = "https://github.com/ten3roberts/ivy" }
flax = { git = "https://github.com/ten3roberts/flax" }
winit = "0.30"
anyhow = "1.0"
image = "0.25"
